refactor: dedupe ingestion handlers; harden neo4j writes
- Consolidate stage boilerplate via PipelineStageSupport

- Isolate ingestion lookups to avoid poisoned transactions

- Make neo4j relationship writes idempotent + null-safe

- Add idempotency tests and refactor docs